--- a/SettingWindow.xaml
+++ b/SettingWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:pmis"
         mc:Ignorable="d"
-        Title="Archive Settings" Height="513" Width="786.249" ResizeMode="NoResize" Icon="resources/sangah_logo_16.ico">
+        Title="Archive Settings" Height="513" Width="786.249" ResizeMode="NoResize" Icon="resources/sangah_logo_16.ico" Topmost="True">
     <Grid>
         <TabControl x:Name="tabControl" Margin="0,0,0,55">
             <TabItem Header="General Settings">
@@ -14,14 +14,14 @@
                         <Grid >
                             <Label x:Name="label" Content="Folder Location" HorizontalAlignment="Left" Margin="10,7,0,0" VerticalAlignment="Top"/>
                             <TextBox x:Name="settingRegisterFolderURI" HorizontalAlignment="Left" Height="23" Margin="10,33,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="282"/>
-                            <Button x:Name="button" Content="Browse..." HorizontalAlignment="Left" Margin="297,34,0,0" VerticalAlignment="Top" Width="75"/>
+                            <Button x:Name="registerFolderLocationButton" Content="Browse..." HorizontalAlignment="Left" Margin="297,34,0,0" VerticalAlignment="Top" Width="75" Click="registerFolderURIButton_Click"/>
                         </Grid>
                     </GroupBox>
                     <GroupBox x:Name="groupBox_Copy" Header="Picture Viewer Settings" HorizontalAlignment="Left" Height="85" Margin="0,90,0,0" VerticalAlignment="Top" Width="395">
                         <Grid>
                             <Label x:Name="label2" Content="Folder Location" HorizontalAlignment="Left" Margin="10,7,0,0" VerticalAlignment="Top"/>
                             <TextBox x:Name="settingPictureFolderURI" HorizontalAlignment="Left" Height="23" Margin="10,33,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="282"/>
-                            <Button x:Name="button2" Content="Browse..." HorizontalAlignment="Left" Margin="297,34,0,0" VerticalAlignment="Top" Width="75"/>
+                            <Button x:Name="pictureFolderLocationButton" Content="Browse..." HorizontalAlignment="Left" Margin="297,34,0,0" VerticalAlignment="Top" Width="75" Click="pictureFolderURIButton_Click"/>
                         </Grid>
                     </GroupBox>
                     <GroupBox x:Name="groupBox_Copy1" Header="Search Options" HorizontalAlignment="Left" Margin="0,180,0,0" Width="425">
@@ -46,7 +46,10 @@
                         </Grid>
                     </GroupBox>
                     <GroupBox x:Name="groupBox_Copy2" Header="Reset Settings" Margin="430,295,10,0">
-                        <Grid />
+                        <Grid >
+                            <Button x:Name="settingsResetButton" Content="Reset Settings" HorizontalAlignment="Left" Margin="10,44,0,0" VerticalAlignment="Top" BorderThickness="1" Padding="4,1" Click="settingsResetButton_Click"/>
+                            <Label x:Name="label5" Content="Restore settings to their original defaults" HorizontalAlignment="Left" Margin="10,17,0,0" VerticalAlignment="Top"/>
+                        </Grid>
                     </GroupBox>
                 </Grid>
             </TabItem>
@@ -71,7 +74,7 @@
                     <GroupBox x:Name="groupBox3" Header="SQLite Settings" Height="129" VerticalAlignment="Top" Margin="0,101,0,0" >
                         <Grid>
                             <Label x:Name="label123_Copy" Content="Database File Location" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
-                            <Button x:Name="sqliteFileLocationButton" Content="Browse..." HorizontalAlignment="Left" Margin="271,36,0,0" VerticalAlignment="Top" Width="75"/>
+                            <Button x:Name="sqliteFileLocationButton" Content="Browse..." HorizontalAlignment="Left" Margin="271,36,0,0" VerticalAlignment="Top" Width="75" Click="sqliteFileLocationButton_Click"/>
                             <Button x:Name="connectSQLiteDatabaseButton" Content="Connect Database" HorizontalAlignment="Left" Margin="10,64,0,0" VerticalAlignment="Top" Click="connectSQLiteDatabaseButton_Click" Padding="4,1" />
                             <TextBox x:Name="settingSQLiteDbLocation" HorizontalAlignment="Left" Height="23" Margin="10,36,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="256"/>
                         </Grid>
