--- a/App.xaml
+++ b/App.xaml
@@ -3,8 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:pmis"
              StartupUri="MainWindow.xaml"
-             ShutdownMode="OnMainWindowClose">
+             ShutdownMode="OnExplicitShutdown">
     <Application.Resources>
-         
+
     </Application.Resources>
 </Application>
