--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -8,22 +8,22 @@
         Title="PMIS - Offline Archive" Height="622" Width="1063" Icon="resources/sangah_logo_16.ico" Closing="Window_Closing">
     <Grid>
         <TabControl x:Name="tabControl1" Margin="10,31,10,10">
-            <TabItem Header="Register">
+            <TabItem x:Name="registerTabPage" Header="Register">
                 <Grid Background="White">
                     <DataGrid x:Name="registerDataGridView" Margin="0,124,0,0" IsReadOnly="True" CanUserResizeRows="False" HeadersVisibility="Column" MouseDoubleClick="registerDataGridView_MouseDoubleClick" MinRowHeight="30" HorizontalGridLinesBrush="Gray" VerticalGridLinesBrush="Gray">
                         <DataGrid.Columns>
-                            <DataGridTextColumn Binding="{Binding [docno]}" ClipboardContentBinding="{x:Null}" Header="Document Number"/>
-                            <DataGridTextColumn Binding="{Binding [title]}" ClipboardContentBinding="{x:Null}" Header="Title"/>
-                            <DataGridTextColumn Binding="{Binding [revision]}" ClipboardContentBinding="{x:Null}" Header="Revision"/>
-                            <DataGridTextColumn Binding="{Binding [doc_version]}" ClipboardContentBinding="{x:Null}" Header="Version"/>
-                            <DataGridTextColumn Binding="{Binding [revision_date]}" ClipboardContentBinding="{x:Null}" Header="Revision Date"/>
-                            <DataGridTextColumn Binding="{Binding [organization]}" ClipboardContentBinding="{x:Null}" Header="Organization" Visibility="Hidden"/>
-                            <DataGridTextColumn Binding="{Binding [doc_type]}" ClipboardContentBinding="{x:Null}" Header="Type"/>
-                            <DataGridTextColumn Binding="{Binding [review_status]}" ClipboardContentBinding="{x:Null}" Header="Review Status" Visibility="Hidden"/>
-                            <DataGridTextColumn Binding="{Binding [registered_by]}" ClipboardContentBinding="{x:Null}" Header="Registered By"/>
-                            <DataGridTextColumn Binding="{Binding [registered]}" ClipboardContentBinding="{x:Null}" Header="Registered"/>
-                            <DataGridTextColumn Binding="{Binding [discipline]}" ClipboardContentBinding="{x:Null}" Header="Discipline" Visibility="Hidden"/>
-                            <DataGridTextColumn Binding="{Binding [doc_status]}" ClipboardContentBinding="{x:Null}" Header="Status"/>
+                            <DataGridTextColumn Binding="{Binding [docno]}" ClipboardContentBinding="{x:Null}" Header="Document Number" Width="240"/>
+                            <DataGridTextColumn Binding="{Binding [title]}" ClipboardContentBinding="{x:Null}" Header="Title" Width="*"/>
+                            <DataGridTextColumn Binding="{Binding [revision]}" ClipboardContentBinding="{x:Null}" Header="Revision" Width="60"/>
+                            <DataGridTextColumn Binding="{Binding [doc_version]}" ClipboardContentBinding="{x:Null}" Header="Version" Width="60"/>
+                            <DataGridTextColumn Binding="{Binding [revision_date]}" ClipboardContentBinding="{x:Null}" Header="Revision Date" Width="100"/>
+                            <DataGridTextColumn Binding="{Binding [organization]}" ClipboardContentBinding="{x:Null}" Header="Organization" Visibility="Hidden" Width="90"/>
+                            <DataGridTextColumn Binding="{Binding [doc_type]}" ClipboardContentBinding="{x:Null}" Header="Type" Width="56"/>
+                            <DataGridTextColumn Binding="{Binding [review_status]}" ClipboardContentBinding="{x:Null}" Header="Review Status" Visibility="Hidden" Width="100"/>
+                            <DataGridTextColumn Binding="{Binding [registered_by]}" ClipboardContentBinding="{x:Null}" Header="Registered By" Width="130"/>
+                            <DataGridTextColumn Binding="{Binding [registered]}" ClipboardContentBinding="{x:Null}" Header="Registered" Width="72"/>
+                            <DataGridTextColumn Binding="{Binding [discipline]}" ClipboardContentBinding="{x:Null}" Header="Discipline" Visibility="Hidden" Width="78"/>
+                            <DataGridTextColumn Binding="{Binding [doc_status]}" ClipboardContentBinding="{x:Null}" Header="Status" Width="100"/>
                         </DataGrid.Columns>
                     </DataGrid>
                     <Button x:Name="searchButton" Content="Search" HorizontalAlignment="Left" Margin="712,55,0,0" VerticalAlignment="Top" Width="104" Height="33" Click="searchButton_Click"/>
@@ -97,10 +97,10 @@
                     <TextBlock x:Name="docViewReviewStatus" HorizontalAlignment="Left" Margin="117,16,0,0" TextWrapping="Wrap" Text="N/A" VerticalAlignment="Top" FontWeight="Bold"/>
                     <DataGrid x:Name="reviewDataGridView" Margin="10,42,10,181" AutoGenerateColumns="False" HeadersVisibility="Column" CanUserResizeRows="False" MinRowHeight="30" IsReadOnly="True" HorizontalGridLinesBrush="Gray" VerticalGridLinesBrush="Gray">
                         <DataGrid.Columns>
-                            <DataGridTextColumn Binding="{Binding [review_date]}" ClipboardContentBinding="{x:Null}" Header="Reviewed"/>
-                            <DataGridTextColumn Binding="{Binding [reviewed_by]}" ClipboardContentBinding="{x:Null}" Header="Reviewed By"/>
-                            <DataGridTextColumn Binding="{Binding [review_status]}" ClipboardContentBinding="{x:Null}" Header="Review Outcome"/>
-                            <DataGridTextColumn Binding="{Binding [review_note]}" ClipboardContentBinding="{x:Null}" Header="Comment"/>
+                            <DataGridTextColumn Binding="{Binding [review_date]}" ClipboardContentBinding="{x:Null}" Header="Reviewed" Width="100"/>
+                            <DataGridTextColumn Binding="{Binding [reviewed_by]}" ClipboardContentBinding="{x:Null}" Header="Reviewed By" Width="0.6*"/>
+                            <DataGridTextColumn Binding="{Binding [review_status]}" ClipboardContentBinding="{x:Null}" Header="Review Outcome" Width="140"/>
+                            <DataGridTextColumn Binding="{Binding [review_note]}" ClipboardContentBinding="{x:Null}" Header="Comment" Width="*"/>
                         </DataGrid.Columns>
                     </DataGrid>
                     <DataGrid x:Name="reviewFileDataGrid" Margin="10,0,10,10" Height="165" VerticalAlignment="Bottom" IsReadOnly="True" HorizontalGridLinesBrush="Gray" VerticalGridLinesBrush="Gray" HeadersVisibility="Column" MouseUp="fileManagerDataGridView_MouseUp" MouseDoubleClick="fileManagerDataGridView_MouseDoubleClick">
@@ -115,8 +115,8 @@
             <TabItem Header="Picture Viewer">
                 <Grid >
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="321*"/>
-                        <ColumnDefinition Width="704*"/>
+                        <ColumnDefinition Width="327*"/>
+                        <ColumnDefinition Width="698*"/>
                     </Grid.ColumnDefinitions>
                     <ListBox x:Name="pictureFolderListBox" Margin="10,10,15,214" SelectionChanged="pictureFolderListBox_SelectionChanged"/>
                     <Image x:Name="pictureBox1" Margin="10,10,10,37" Grid.Column="1">
@@ -137,12 +137,12 @@
         </TabControl>
         <Menu x:Name="menu" VerticalAlignment="Top" Background="#FFEEEEEE" Height="21" BorderThickness="0">
             <MenuItem Header="_File">
-                <MenuItem Header="_Settings" Click="MenuItem_Click" />
+                <MenuItem Header="_Settings" Click="settingMenuItem_Click" />
                 <Separator />
-                <MenuItem Header="_Exit" />
+                <MenuItem Header="_Exit" Click="closeMenuItem_Click" />
             </MenuItem>
             <MenuItem Header="_Help">
-                <MenuItem Header="_About" />
+                <MenuItem Header="_About" Click="MenuItem_Click" />
             </MenuItem>
         </Menu>
 
