--- a/AboutBox.xaml
+++ b/AboutBox.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:pmis"
         mc:Ignorable="d"
-        Title="About PMIS - Offline Archive" Height="373" Width="467" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" Icon="resources/sangah_logo_16.ico">
+        Title="About PMIS - Offline Archive" Height="373" Width="467" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Icon="resources/sangah_logo_16.ico">
     <Grid Margin="0,0,0,6">
         <Image x:Name="image" Margin="10,0,23,48" Source="resources/sangah-logo-2.png" Height="128" VerticalAlignment="Bottom"/>
         <Label x:Name="labelProductName" Content="Product Name" HorizontalAlignment="Left" Margin="10,16,0,0" VerticalAlignment="Top" FontWeight="Bold" Foreground="#FF595959"/>
