--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -10,7 +10,7 @@
         <TabControl x:Name="tabControl1" Margin="10,31,10,10">
             <TabItem x:Name="registerTabPage" Header="Register">
                 <Grid Background="White">
-                    <DataGrid x:Name="registerDataGridView" Margin="0,124,0,0" IsReadOnly="True" CanUserResizeRows="False" HeadersVisibility="Column" MouseDoubleClick="registerDataGridView_MouseDoubleClick" MinRowHeight="30" HorizontalGridLinesBrush="Gray" VerticalGridLinesBrush="Gray">
+                    <DataGrid x:Name="registerDataGridView" Margin="0,124,0,0" IsReadOnly="True" CanUserResizeRows="False" HeadersVisibility="Column" MouseDoubleClick="registerDataGridView_MouseDoubleClick" MinRowHeight="30" HorizontalGridLinesBrush="#FFD1D1D1" VerticalGridLinesBrush="#FFD1D1D1">
                         <DataGrid.Columns>
                             <DataGridTextColumn Binding="{Binding [docno]}" ClipboardContentBinding="{x:Null}" Header="Document Number" Width="240"/>
                             <DataGridTextColumn Binding="{Binding [title]}" ClipboardContentBinding="{x:Null}" Header="Title" Width="*"/>
@@ -82,7 +82,7 @@
                     <GroupBox x:Name="groupBox_Copy" Header="Note" Margin="10,217,10,180">
                         <TextBlock x:Name="docViewNote" TextWrapping="Wrap" Text="" />
                     </GroupBox>
-                    <DataGrid x:Name="fileManagerDataGridView" Margin="10,0,10,10" Height="165" VerticalAlignment="Bottom" AutoGenerateColumns="False" IsReadOnly="True" MouseUp="fileManagerDataGridView_MouseUp" HorizontalGridLinesBrush="Gray" VerticalGridLinesBrush="Gray" HeadersVisibility="Column" CanUserResizeColumns="False" MouseDoubleClick="fileManagerDataGridView_MouseDoubleClick">
+                    <DataGrid x:Name="fileManagerDataGridView" Margin="10,0,10,10" Height="165" VerticalAlignment="Bottom" AutoGenerateColumns="False" IsReadOnly="True" MouseUp="fileManagerDataGridView_MouseUp" HorizontalGridLinesBrush="#FFD1D1D1" VerticalGridLinesBrush="#FFD1D1D1" HeadersVisibility="Column" CanUserResizeColumns="False" MouseDoubleClick="fileManagerDataGridView_MouseDoubleClick">
                         <DataGrid.Columns>
                             <DataGridTextColumn Binding="{Binding FileName}" ClipboardContentBinding="{x:Null}" Header="File Name" Width="*"/>
                             <DataGridTextColumn Binding="{Binding FileName}" ClipboardContentBinding="{x:Null}" Header="File Size" Width="0.3*"/>
@@ -95,7 +95,7 @@
                 <Grid Background="White">
                     <Label x:Name="label1_Copy11" Content="Review Outcome" Margin="13,11,0,0" VerticalAlignment="Top" Foreground="#FF727272" HorizontalAlignment="Left" Width="99"/>
                     <TextBlock x:Name="docViewReviewStatus" HorizontalAlignment="Left" Margin="117,16,0,0" TextWrapping="Wrap" Text="N/A" VerticalAlignment="Top" FontWeight="Bold"/>
-                    <DataGrid x:Name="reviewDataGridView" Margin="10,42,10,181" AutoGenerateColumns="False" HeadersVisibility="Column" CanUserResizeRows="False" MinRowHeight="30" IsReadOnly="True" HorizontalGridLinesBrush="Gray" VerticalGridLinesBrush="Gray">
+                    <DataGrid x:Name="reviewDataGridView" Margin="10,42,10,181" AutoGenerateColumns="False" HeadersVisibility="Column" CanUserResizeRows="False" MinRowHeight="30" IsReadOnly="True" HorizontalGridLinesBrush="#FFD1D1D1" VerticalGridLinesBrush="#FFD1D1D1">
                         <DataGrid.Columns>
                             <DataGridTextColumn Binding="{Binding [review_date]}" ClipboardContentBinding="{x:Null}" Header="Reviewed" Width="100"/>
                             <DataGridTextColumn Binding="{Binding [reviewed_by]}" ClipboardContentBinding="{x:Null}" Header="Reviewed By" Width="0.6*"/>
@@ -103,7 +103,7 @@
                             <DataGridTextColumn Binding="{Binding [review_note]}" ClipboardContentBinding="{x:Null}" Header="Comment" Width="*"/>
                         </DataGrid.Columns>
                     </DataGrid>
-                    <DataGrid x:Name="reviewFileDataGrid" Margin="10,0,10,10" Height="165" VerticalAlignment="Bottom" IsReadOnly="True" HorizontalGridLinesBrush="Gray" VerticalGridLinesBrush="Gray" HeadersVisibility="Column" MouseUp="fileManagerDataGridView_MouseUp" MouseDoubleClick="fileManagerDataGridView_MouseDoubleClick">
+                    <DataGrid x:Name="reviewFileDataGrid" Margin="10,0,10,10" Height="165" VerticalAlignment="Bottom" IsReadOnly="True" HorizontalGridLinesBrush="#FFD1D1D1" VerticalGridLinesBrush="#FFD1D1D1" HeadersVisibility="Column" MouseUp="fileManagerDataGridView_MouseUp" MouseDoubleClick="fileManagerDataGridView_MouseDoubleClick">
                         <DataGrid.Columns>
                             <DataGridCheckBoxColumn Binding="{Binding FileName}" ClipboardContentBinding="{x:Null}" Header="File Name" Width="*"/>
                             <DataGridCheckBoxColumn Binding="{Binding FileHumanSize}" ClipboardContentBinding="{x:Null}" Header="File Size" Width="0.3*"/>
@@ -122,7 +122,7 @@
                     <Image x:Name="pictureBox1" Margin="10,10,10,37" Grid.Column="1">
 
                     </Image>
-                    <DataGrid x:Name="pictureGridView" Margin="10,0,10,10" Height="199" VerticalAlignment="Bottom" AutoGenerateColumns="False" IsReadOnly="True" MouseUp="pictureGridView_CellClick" HorizontalGridLinesBrush="Gray" VerticalGridLinesBrush="Gray" HeadersVisibility="Column" CanUserResizeColumns="False" MouseDoubleClick="fileManagerDataGridView_MouseDoubleClick">
+                    <DataGrid x:Name="pictureGridView" Margin="10,0,10,10" Height="199" VerticalAlignment="Bottom" AutoGenerateColumns="False" IsReadOnly="True" MouseUp="pictureGridView_CellClick" HorizontalGridLinesBrush="#FFD1D1D1" VerticalGridLinesBrush="#FFD1D1D1" HeadersVisibility="Column" CanUserResizeColumns="False" MouseDoubleClick="fileManagerDataGridView_MouseDoubleClick">
                         <DataGrid.Columns>
                             <DataGridTextColumn Binding="{Binding FileName}" ClipboardContentBinding="{x:Null}" Header="File Name" Width="*"/>
                             <DataGridTextColumn Binding="{Binding FileName}" ClipboardContentBinding="{x:Null}" Header="File Size" Width="0.3*" Visibility="Hidden"/>
@@ -132,6 +132,21 @@
                     <Button x:Name="picturePreviousButton" Content="&lt; Previous" Grid.Column="1" HorizontalAlignment="Left" Margin="10,0,0,10" Width="75" Height="22" VerticalAlignment="Bottom" Click="picturePreviousButtonOnClick"/>
                     <Button x:Name="pictureNextButton" Content="Next &gt;" Grid.Column="1" HorizontalAlignment="Left" Margin="90,0,0,10" Width="75" Click="pictureNextButtonOnClick" Height="22" VerticalAlignment="Bottom"/>
 
+                </Grid>
+            </TabItem>
+            <TabItem x:Name="archiveTabPage" Header="Archive" >
+                <Grid Background="White">
+                    <DataGrid x:Name="archiveDataGridView" IsReadOnly="True" CanUserResizeRows="False" HeadersVisibility="Column" MouseDoubleClick="archiveDataGridView_MouseDoubleClick" MinRowHeight="30" HorizontalGridLinesBrush="#FFD1D1D1" VerticalGridLinesBrush="#FFD1D1D1" Margin="0,57,0,0">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Binding="{Binding [description]}" ClipboardContentBinding="{x:Null}" Header="Description" Width="240"/>
+                            <DataGridTextColumn Binding="{Binding [archive_type]}" ClipboardContentBinding="{x:Null}" Header="Archive Type" Width="*"/>
+                            <DataGridTextColumn Binding="{Binding [id]}" ClipboardContentBinding="{x:Null}" Visibility="Hidden"/>
+                        </DataGrid.Columns>
+                    </DataGrid>
+                    <Label x:Name="label2" Content="Search" HorizontalAlignment="Left" Margin="10,14,0,0" VerticalAlignment="Top"/>
+                    <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="23" Margin="60,16,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="281"/>
+                    <Label x:Name="label2_Copy" Content="Archive Type" HorizontalAlignment="Left" Margin="376,13,0,0" VerticalAlignment="Top"/>
+                    <ComboBox x:Name="comboBox" HorizontalAlignment="Left" Margin="459,15,0,0" VerticalAlignment="Top" Width="120"/>
                 </Grid>
             </TabItem>
         </TabControl>
