--- a/SettingWindow.xaml
+++ b/SettingWindow.xaml
@@ -29,17 +29,17 @@
                             <TabControl x:Name="tabControl1" >
                                 <TabItem x:Name="settingTypeTabItem" Header="Type items">
                                     <Grid Background="#FFE5E5E5">
-                                        <TextBox x:Name="docTypesTextBox" TextWrapping="Wrap" Text="TextBox" AcceptsReturn="True" />
+                                        <TextBox x:Name="docTypesTextBox" TextWrapping="Wrap" Text="TextBox" AcceptsReturn="True" ScrollViewer.CanContentScroll="True" VerticalScrollBarVisibility="Auto" />
                                     </Grid>
                                 </TabItem>
                                 <TabItem x:Name="settingDisciplineTabItem" Header="Discipline items">
                                     <Grid Background="#FFE5E5E5">
-                                        <TextBox x:Name="docDisciplinesTextBox" TextWrapping="Wrap" Text="TextBox" AcceptsReturn="True"/>
+                                        <TextBox x:Name="docDisciplinesTextBox" TextWrapping="Wrap" Text="TextBox" AcceptsReturn="True" ScrollViewer.CanContentScroll="True" VerticalScrollBarVisibility="Auto"/>
                                     </Grid>
                                 </TabItem>
                                 <TabItem x:Name="settingStatusTabItem" Header="Status items">
                                     <Grid Background="#FFE5E5E5">
-                                        <TextBox x:Name="docStatusesTextBox" TextWrapping="Wrap" Text="TextBox" AcceptsReturn="True"/>
+                                        <TextBox x:Name="docStatusesTextBox" TextWrapping="Wrap" Text="TextBox" AcceptsReturn="True" ScrollViewer.CanContentScroll="True" VerticalScrollBarVisibility="Auto"/>
                                     </Grid>
                                 </TabItem>
                             </TabControl>
@@ -47,7 +47,7 @@
                     </GroupBox>
                     <GroupBox x:Name="settingResetGroupBox" Header="Reset Settings" Margin="430,282,10,0">
                         <Grid >
-                            <Button x:Name="settingsResetButton" Content="Reset Settings" HorizontalAlignment="Left" Margin="10,39,0,0" BorderThickness="1" Padding="4,1" Click="settingsResetButton_Click" VerticalAlignment="Top"/>
+                            <Button x:Name="settingsResetButton" Content="Reset Settings" HorizontalAlignment="Left" Margin="10,39,0,0" BorderThickness="1" Padding="4,1" Click="settingsResetButton_Click" VerticalAlignment="Top" Background="#FFEA5252" Foreground="White"/>
                             <Label x:Name="restoreSettingsMessage" Content="Restore settings to their original defaults" HorizontalAlignment="Left" Margin="10,8,0,0" VerticalAlignment="Top"/>
                         </Grid>
                     </GroupBox>
@@ -77,6 +77,7 @@
                             <Button x:Name="sqliteFileLocationButton" Content="Browse..." HorizontalAlignment="Left" Margin="271,36,0,0" VerticalAlignment="Top" Width="75" Click="sqliteFileLocationButton_Click"/>
                             <Button x:Name="connectSQLiteDatabaseButton" Content="Connect Database" HorizontalAlignment="Left" Margin="10,64,0,0" VerticalAlignment="Top" Click="connectSQLiteDatabaseButton_Click" Padding="4,1" />
                             <TextBox x:Name="settingSQLiteDbLocation" HorizontalAlignment="Left" Height="23" Margin="10,36,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="256"/>
+                            <TextBlock x:Name="settingDBConnectionInfo" HorizontalAlignment="Left" Margin="134,67,0,0" TextWrapping="Wrap" Text="Not Connected" VerticalAlignment="Top" FontStyle="Italic"/>
                         </Grid>
                     </GroupBox>
                 </Grid>
@@ -92,17 +93,21 @@
                             <Button x:Name="importReviewDataButton" Content="Import Review Data" HorizontalAlignment="Left" Margin="146,181,0,0" VerticalAlignment="Top" Padding="4,1" Click="importReviewDataButton_Click"/>
                             <GroupBox x:Name="groupBox5" Header="Data Stats" Height="89" Margin="558,10,10,0" VerticalAlignment="Top">
                                 <Grid >
-                                    <Label x:Name="label3" Content="Review #" HorizontalAlignment="Left" Margin="39,7,0,0" VerticalAlignment="Top"/>
-                                    <Label x:Name="label3_Copy" Content="Document #" HorizontalAlignment="Left" Margin="20,33,0,0" VerticalAlignment="Top"/>
-                                    <TextBlock x:Name="settingsReviewCount" HorizontalAlignment="Left" Margin="112,12,0,0" TextWrapping="Wrap" Text="N/A" VerticalAlignment="Top"/>
-                                    <TextBlock x:Name="settingsDocumentCount" HorizontalAlignment="Left" Margin="112,38,0,0" TextWrapping="Wrap" Text="N/A" VerticalAlignment="Top"/>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="83*"/>
+                                        <ColumnDefinition Width="75*"/>
+                                    </Grid.ColumnDefinitions>
+                                    <Label x:Name="settingReviewCountLabel" Content="Review #" HorizontalAlignment="Right" Margin="0,7,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Right"/>
+                                    <Label x:Name="settingDocumentCountLabel" Content="Document #" HorizontalAlignment="Right" Margin="0,33,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Right"/>
+                                    <TextBlock x:Name="settingsReviewCount" HorizontalAlignment="Left" Margin="3,12,0,0" TextWrapping="Wrap" Text="N/A" VerticalAlignment="Top" Grid.Column="1"/>
+                                    <TextBlock x:Name="settingsDocumentCount" HorizontalAlignment="Left" Margin="3,38,0,0" TextWrapping="Wrap" Text="N/A" VerticalAlignment="Top" Grid.Column="1"/>
                                 </Grid>
                             </GroupBox>
                             <Label x:Name="apiUrlLabel" Content="API Url" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
                             <Label x:Name="projectCodeLabel" Content="Project Code" HorizontalAlignment="Left" Margin="10,65,0,0" VerticalAlignment="Top"/>
                             <Label x:Name="authenticationKeyLabel" Content="Authentication Key" HorizontalAlignment="Left" Margin="10,119,0,0" VerticalAlignment="Top"/>
-                            <Border BorderBrush="Black" BorderThickness="1" Margin="10,218,10,10">
-                                <TextBlock x:Name="importLogViewer" TextWrapping="Wrap" Background="#FFF9F9F9"/>
+                            <Border BorderBrush="#FFACACAC" BorderThickness="1" Margin="10,218,10,10">
+                                <TextBox x:Name="importLogViewer" TextWrapping="Wrap" Background="#FFF9F9F9" VerticalScrollBarVisibility="Auto"/>
                             </Border>
                         </Grid>
                     </GroupBox>
