--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -53,16 +53,7 @@
                             <DataGridTextColumn x:Name="doclist_status" Binding="{Binding [doc_status]}" ClipboardContentBinding="{x:Null}" Header="Status" Width="100"/>
                         </DataGrid.Columns>
                     </DataGrid>
-                    <Button x:Name="searchButton" Content="Search" HorizontalAlignment="Left" Margin="736,59,0,0" VerticalAlignment="Top" Width="104" Height="33" Click="searchButton_Click">
-                        <Button.Background>
-                            <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
-                                <GradientStop Color="#FFF3F3F3" Offset="0"/>
-                                <GradientStop Color="#FFEBEBEB" Offset="0.5"/>
-                                <GradientStop Color="#FFDDDDDD" Offset="0.5"/>
-                                <GradientStop Color="#FFCDCDCD" Offset="1"/>
-                            </LinearGradientBrush>
-                        </Button.Background>
-                    </Button>
+                    <Button x:Name="searchButton" Content="Search" HorizontalAlignment="Left" Margin="736,59,0,0" VerticalAlignment="Top" Width="104" Height="33" Click="searchButton_Click" Background="#FFDDDDDD" BorderBrush="Gray"/>
                     <Button x:Name="searchClearButton" Content="Clear" HorizontalAlignment="Left" Margin="736,97,0,0" VerticalAlignment="Top" Width="75" Click="searchClearButton_Click"/>
                 </Grid>
             </TabItem>
